refactor config and languages placeholder api in ItemBuilder Quick arenas with langages and 70% config done